--- a/Assignment2/Assignment2.tex
+++ b/Assignment2/Assignment2.tex
@@ -137,13 +137,13 @@ and latex-tikz codes from
 \begin{lstlisting}
 https://github.com/GauthamBellamkonda/AI1103/tree/main/Assignment2
 \end{lstlisting}
-\section*{Problem}
+\section{Problem}
 (Prob, 5.24) One card is drawn from a well-shuffled deck of 52 cards. Calculate the probability that the card will
 \begin{enumerate}[label = (\roman*)]
 \item be an ace.
 \item not be an ace.
 \end{enumerate}
-\section*{Solution}
+\section{Solution}
 For convinience, let's denote the cards Ace, J, Q, K by the numbers $\{ 1, 11, 12, 13\}$ respectively. Let $X \in \{ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13 \}$ denote the outcome of the experiment. We know that there exist exactly 4 cards with a particular number in a deck of 52 cards. Assuming that the deck of cards is well-shuffled, the probability mass function for this experiment is expressed as\\
 \begin{align}
 	\Pr(X=i) = 
