--- a/Assignment2/Assignment2.tex
+++ b/Assignment2/Assignment2.tex
@@ -146,7 +146,7 @@ https://github.com/GauthamBellamkonda/AI1103/tree/main/Assignment2
 \section{Solution}
 For convinience, let's denote the cards Ace, J, Q, K by the numbers $\{ 1, 11, 12, 13\}$ respectively. Let $X \in \{ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13 \}$ denote the outcome of the experiment. We know that there exist exactly 4 cards with a particular number in a deck of 52 cards. 
 \begin{align}
-\therefore n(X=i) = 4 \; \forall \; i \in \{ 1, 2, 3, \ldots 12, 13 \}
+\therefore n(X=i) = 4 \; , \; i \in \{ 1, 2, 3, \ldots 12, 13 \}
 \end{align}
 
 Assuming that the deck of cards is well-shuffled, the probability mass function for this experiment is expressed as\\
