--- a/Assignment3/Assignment3.tex
+++ b/Assignment3/Assignment3.tex
@@ -134,7 +134,7 @@ and latex-tikz codes from
 https://github.com/GauthamBellamkonda/AI1103/tree/main/Assignment3
 \end{lstlisting}
 \section{Problem}
-Consider a discrete-time channel $Y = X + Z$, where the additive noise $Z$ is signal dependent. In particular, given the transmitted symbol $X \in \{-a, a \}$ at any instant, the noise sample $Z$ is chosen indepedently from a Gaussian distribution with mean $\beta X$ and unit variance. Assume a threshold detector with zero threshold at the receiver. When $\beta = 0$, the BER was found to be $Q(a) = 1 \times 10^{-8}.$
+(GATE 45) Consider a discrete-time channel $Y = X + Z$, where the additive noise $Z$ is signal dependent. In particular, given the transmitted symbol $X \in \{-a, a \}$ at any instant, the noise sample $Z$ is chosen indepedently from a Gaussian distribution with mean $\beta X$ and unit variance. Assume a threshold detector with zero threshold at the receiver. When $\beta = 0$, the BER was found to be $Q(a) = 1 \times 10^{-8}.$
 \begin{align}
 \left( Q(v) = \dfrac{1}{\sqrt{2 \pi}} \int_v ^{\infty} e^{-\frac{u^2}{2}} du \text{, and for } v > 1 \text{, use } Q(v) = e^{\frac{-v^2}{2}} \right)
 \end{align}
