--- a/Assignment3/Assignment3.tex
+++ b/Assignment3/Assignment3.tex
@@ -207,8 +207,11 @@ From the definition of $Q(v)$, it is easy to see that the expression in \ref{eqn
 \end{align}
 When $\beta = 0$, it is given that 
 \begin{align}
-\text{BER} = Q(a) &= 10^{-8} \\
-\Leftrightarrow e^{-a^2 / 2} &= 10^{-8}\\
+\text{BER} = Q(a) &= 10^{-8}
+\end{align}
+On computing, $Q(1) \approx 0.4$. Since $Q(a)<Q(1)$, it is easy to see that $a>1$ (as $Q(x)$ is a decreasing function)
+\begin{align}
+\therefore e^{-a^2 / 2} &= 10^{-8}\\
 \Leftrightarrow a &\approx 6.069
 \end{align}
 When $\beta = -0.3$,
