--- a/Assignment3/Assignment3.tex
+++ b/Assignment3/Assignment3.tex
@@ -179,7 +179,7 @@ Therefore, the resultant signal $Y = X+Z$ is comprised of $X$ which can take eit
 \begin{figure}[!htb]
     \centering    
 	\includegraphics[width=\columnwidth]{./Figures/Figure_1.png}
-    \caption{The PDF of $Y$}
+    \caption{The CDF of $Y$}
 \end{figure}
 \begin{align}
 \therefore \text{BER} = {}& \text{BER}_{+a} + \text{BER}_{-a}\\
