Made some minor changes

--- a/Assignment3/Assignment3.tex
+++ b/Assignment3/Assignment3.tex
@@ -175,8 +175,8 @@ f_Y(y) = &f_Y(y\;|\;X = a)\Pr(X=a) \nonumber \\
       &+ \dfrac{1}{2} \cdot \dfrac{1}{\sqrt{2\pi}}\,\exp \left(-\frac{(y + a(1 + \beta))^2}{2} \right)
 \end{align}
 Therefore, the resultant signal $Y = X+Z$ is comprised of $X$ which can take either positive or negative value, and some noise $Z$. The detector (which has zero threshold) can give us incorrect bits when $X = +a$ and $Y<0$ (BER$_{+a}$) or $X=-a$ and $Y<0$ (BER$_{-a}$), as shown in the graph below.
-~\\[-2em]
-\begin{figure}[!htb]
+
+\begin{figure}
     \centering    
 	\includegraphics[width=\columnwidth]{./Figures/Figure_1.png}
     \caption{The CDF of $Y$}
