--- a/Assignment3/Assignment3.tex
+++ b/Assignment3/Assignment3.tex
@@ -174,12 +174,13 @@ f_Y(y) = &f_Y(y\;|\;X = a)\Pr(X=a) \nonumber \\
  = &\dfrac{1}{2} \cdot \dfrac{1}{\sqrt{2\pi}}\,\exp \left(-\frac{(y - a(1 + \beta))^2}{2} \right) \nonumber \\
       &+ \dfrac{1}{2} \cdot \dfrac{1}{\sqrt{2\pi}}\,\exp \left(-\frac{(y + a(1 + \beta))^2}{2} \right)
 \end{align}
-Therefore, the resultant signal $Y = X+Z$ is comprised of $X$ which can take either positive or negative value, and some noise $Z$. The detector (which has zero threshold) can give us incorrect bits when $X = +a$ and $Y<0$ (BER$_{+a}$) or $X=-a$ and $Y<0$ (BER$_{-a}$), as shown in the graph below.
+Therefore, the resultant signal $Y = X+Z$ is comprised of $X$ which can take either positive or negative value, and some noise $Z$. The detector (which has zero threshold) can give us incorrect bits when $X = +a$ and $Y<0$ (BER$_{+a}$) or $X=-a$ and $Y<0$ (BER$_{-a}$), as shown in Fig. \ref{CDF_Y} below.
 
 \begin{figure}
-    \centering    
+    \centering
 	\includegraphics[width=\columnwidth]{./Figures/Figure_1.png}
-    \caption{The CDF of $Y$}
+    \caption{The CDF of \textit{Y}}
+    \label{CDF_Y}
 \end{figure}
 \begin{align}
 \therefore \text{BER} = {}& \text{BER}_{+a} + \text{BER}_{-a}\\
