Formatted the figure to a new page

--- a/Assignment3/Assignment3.tex
+++ b/Assignment3/Assignment3.tex
@@ -199,6 +199,7 @@ X<0 \; &, \; g(Y) = a \; (\text{Call this BER}_{-a})
 \therefore \text{BER} &= \text{BER}_{+a} + \text{BER}_{-a}\\
 &= Q(a(1+\beta))
 \end{align} 
+\clearpage
 \begin{figure}[!hbt]
     \centering
 	\includegraphics[width=\columnwidth]{./Figures/Figure_1.png}
