Removed text, added equations

--- a/Assignment4/Assignment4.tex
+++ b/Assignment4/Assignment4.tex
@@ -146,12 +146,10 @@ Let $S$ be a sample space and two mutually exclusive events $A$ and $B$ be such 
 Given that $A$ and $B$ are mutually exclusive events.
 \begin{align}
 \Pr(A+B) &= 1\\
-\Pr(A) + \Pr(B) &= 1 
-\end{align}
-\begin{align}
+\Pr(A) + \Pr(B) &= 1 \\
 \Pr(A)\Pr(B) &= \Pr(A) - (\Pr(A))^2\\
 &= \dfrac{1}{4} - \left( \Pr(A) - \dfrac{1}{2} \right)^2 \\
-&\leq \dfrac{1}{4}
+&\leq \dfrac{1}{4}\\
+\Pr(A) = \Pr(B) = \dfrac{1}{2}, &\Rightarrow \Pr(A)\Pr(B) = \dfrac{1}{4}\\ \therefore \text{max}(\Pr(A)\Pr(B)) &= \dfrac{1}{4}.
 \end{align}
-When $\Pr(A) = \Pr(B) = \dfrac{1}{2}$, $\Pr(A)\Pr(B) = \dfrac{1}{4}$. Therefore, maximum value of $\Pr(A)\Pr(B)$ is $\dfrac{1}{4}$.
 \end{document}
