Removed text, added equations

--- a/Assignment4/Assignment4.tex
+++ b/Assignment4/Assignment4.tex
@@ -143,13 +143,12 @@ GATE 2014 (CS-SET 3), Q.48 (CS/IT section)
 \end{center}
 Let $S$ be a sample space and two mutually exclusive events $A$ and $B$ be such that $A + B = S$. If $P(\cdot)$ denotes the probability of the event, the maximum value of $P(A)P(B)$ is
 \section{Solution}
-Given that $A$ and $B$ are mutually exclusive events.
 \begin{align}
 \Pr(A+B) &= 1\\
 \Pr(A) + \Pr(B) &= 1 \\
 \Pr(A)\Pr(B) &= \Pr(A) - (\Pr(A))^2\\
 &= \dfrac{1}{4} - \left( \Pr(A) - \dfrac{1}{2} \right)^2 \\
 &\leq \dfrac{1}{4}\\
-\Pr(A) = \Pr(B) = \dfrac{1}{2}, &\Rightarrow \Pr(A)\Pr(B) = \dfrac{1}{4}\\ \therefore \text{max}(\Pr(A)\Pr(B)) &= \dfrac{1}{4}.
+\Pr(A) = \Pr(B) = \dfrac{1}{2} &\Rightarrow \Pr(A)\Pr(B) = \dfrac{1}{4}\\ \therefore \text{max}(\Pr(A)\Pr(B)) &= \dfrac{1}{4}
 \end{align}
 \end{document}
