Proof by contradiction

--- a/Challenge Problem/Challenge Problem.tex
+++ b/Challenge Problem/Challenge Problem.tex
@@ -142,12 +142,16 @@ We know that,
 &+ i \int_\mathbb{R} \sin(2 \pi x) f_X(x) \; dx \\
 \because \phi_X(2\pi) = 1, & \int_\mathbb{R} \sin(2 \pi x) f_X(x) \; dx = 0\\
 1 &= \phi_X(2\pi)\\
-&= \int_\mathbb{R} \cos(2\pi x) f_X(x) \; dx \\
-&\leq \int_\mathbb{R} 1 \cdot f_X(x) \; dx \\
-&\leq \int_\mathbb{R} f_X(x) \; dx \\
-&\leq 1.
+&= \int_\mathbb{R} \cos(2\pi x) f_X(x) \; dx
 \end{align}
-Therefore equality must occur throughout.
+Assume that $\cos(2\pi x) \neq 1$.  
+\begin{align}
+\therefore 1 &= \int_\mathbb{R} \cos(2\pi x) f_X(x) \; dx \\
+&< \int_\mathbb{R} 1 \cdot f_X(x) \; dx \\
+&< \int_\mathbb{R} f_X(x) \; dx \\
+&< 1. \tag{Contradiction}
+\end{align}
+Hence, our assumption that $\cos(2\pi x) \neq 1$ is incorrect.
 \begin{align}
 &\therefore \cos(2 \pi x) = 1, \; \text{for all  $X=x$}\\
 &\Rightarrow X \in \; \mathbb{Z}\\
