Proof by contradiction

--- a/Challenge Problem/Challenge Problem.tex
+++ b/Challenge Problem/Challenge Problem.tex
@@ -144,7 +144,7 @@ We know that,
 1 &= \phi_X(2\pi)\\
 &= \int_\mathbb{R} \cos(2\pi x) f_X(x) \; dx
 \end{align}
-Assume that $\cos(2\pi x) \neq 1$.  
+Assume that $\cos(2\pi x) \neq 1$. This implies that $\cos(2\pi x) < 1 \; \forall \; x \in \mathbb{R}$.
 \begin{align}
 \therefore 1 &= \int_\mathbb{R} \cos(2\pi x) f_X(x) \; dx \\
 &< \int_\mathbb{R} 1 \cdot f_X(x) \; dx \\
