--- a/Assignment5/Assignment5.tex
+++ b/Assignment5/Assignment5.tex
@@ -196,7 +196,7 @@ f_Y(y) &= \begin{cases}
 0 & \text{otherwise}
 \end{cases}
 \end{align}
-Fig. \ref{CDF_Y} shows a theoretical vs simulated plot of the PDF of random variable $Y$.
+Therefore, \textbf{option 2} is correct. Fig. \ref{CDF_Y} shows a theoretical vs simulated plot of the PDF of random variable $Y$.
 \begin{figure}[!hbt]
     \centering
 	\includegraphics[width=\columnwidth]{./Figures/Figure_1.png}
