Made some minor changes

--- a/Assignment5/Assignment5.tex
+++ b/Assignment5/Assignment5.tex
@@ -146,9 +146,9 @@ https://github.com/GauthamBellamkonda/AI1103/tree/main/Assignment5
 \item $\dfrac{1}{\sqrt{y}}$ 
 \end{enumerate}
 \section{Solution}
-We know that, since $Y = (X+1)^2$, for $y<0$, 
+We know that, since $Y = (X+1)^2$, 
 \begin{align}
-F_Y(y) = 0 
+F_Y(y) = 0 \; \forall \; y < 0
 \end{align}
 Therefore, for $y\geq 0$, 
 \begin{align}
@@ -173,7 +173,7 @@ F_X(x) &=
 \end{cases}
 \label{cdf_x}
 \end{align}
-Using \ref{cdf_x} in \ref{eqn_}, and using the fact that 
+Using \eqref{cdf_x} in \eqref{eqn_}, and using the fact that 
 \begin{align}
 -\sqrt{y}-1 \leq -1 \; \forall \; y \geq 0,
 \end{align}
