--- a/Assignment6/Assignment6.tex
+++ b/Assignment6/Assignment6.tex
@@ -142,26 +142,76 @@ Let $X_1, X_2, \ldots , X_n$ be a random sample of size $n \; ( \geq 2 ) $ from 
 \begin{align}
 f(x;\theta) = 
 \begin{cases}
-\dfrac{1}{\theta} \exp ( -\frac{x}{\theta}) & x > 0, \\
+\dfrac{1}{\theta} \exp\brak{-\dfrac{x}{\theta}} & x > 0, \\
 0, & \text{otherwise,}
 \end{cases}
 \end{align}
 where $\theta \in (0, \infty)$. Let $X_{(1)} = $ min $ \{ X_1, X_2, \ldots , X_n \} $ and $T = \sum_{i=1}^n X_i $. Then $E(X_{(1)} | T)$ equals $\ldots \ldots \ldots$
-\begin{itemize}
+\begin{enumerate}[label = (\Alph*)]
 \item $\dfrac{T}{n^2}$ \\
 \item $\dfrac{T}{n}$ \\
 \item $\dfrac{(n+1)T}{2n}$ \\
 \item $\dfrac{(n+1)^2 T}{4n^2}$
-\end{itemize}
+\end{enumerate}
+
 \section{Solution}
-For $n = 2$, 
+\textbf{Lehmann–Scheffé theorem :}
+
+If $T$ is a complete sufficient statistic for $\theta$ and 
 \begin{align}
-E(X_{(1)} | T) &= \int_{ - \infty }^{ \infty } x f_{ X_{(1)} }( x | T ) dx \\
-&= \int_{ - \infty }^{ \infty } x \frac{f_{X_1 , X_2}(x, T-x) + f_{X_1 , X_2}(T-x, x)}{2 f_{X_1 + X_2}(T)} dx\\
-&= \int_{0}^{T} x  \frac{\exp(-\frac{x}{\theta})\exp(-\frac{T-x}{\theta})}{\theta^2 ( \frac{1}{\theta^2} T \exp(-\frac{T}{\theta})) }  dx \\
-&= \int_{0}^{T} x  \frac{1}{T}  dx \\
-&= \frac{1}{T} \int_{0}^{T} x dx \\
-&= \frac{T}{2}
+\label{eqn 2.0.1}
+E(g(T)) = \tau(\theta)
 \end{align}
-The given key is $\dfrac{T}{n^2} = \dfrac{T}{4}$ 
+then $g(T)$ is the uniformly minimum-variance unbiased estimator (UMVUE) of $\tau(\theta)$.\\
+
+We know that 
+\begin{align}
+T = \sum_{i=1}^{n} X_i
+\end{align}
+is a complete and sufficient statistic. By the law of total expectation, 
+\begin{align}
+\label{eqn 2.0.3}
+E\brak{E(X_{(1)} | T )} = E(X_{(1)})
+\end{align}
+By Lehmann–Scheffé theorem, with
+\begin{align}
+\theta &= X_{(1)},\\ 
+\tau(x) &= E(x),\\
+g(T) &= E(X_{(1)} | T).
+\end{align}
+it follows from \eqref{eqn 2.0.3} that $E(X_{(1)} | T)$ is the UMVUE of $E(X_{(1)})$.
+\begin{align}
+\pr{X_{(1)} > x} &= \pr{X_1 > x}\ldots \pr{X_n > x}\\
+&= (1-F_{X_{1}}(x))\ldots(1-F_{X_{n}}(x))\\
+&= (1-F_{X_{1}}(x))^n \\
+&= \exp\brak{-\frac{nx}{\theta}}\\
+F_{X_{(1)}}(x) &= 1 - \exp\brak{-\frac{nx}{\theta}}\\
+f_{X_{(1)}}(x) &= \frac{n}{\theta} \exp\brak{-\frac{nx}{\theta}}
+\end{align}
+Therefore, $X_{(1)}$ follows an exponential distribution with mean $\dfrac{\theta}{n}$.
+\begin{align}
+E(X_{(1)}) = \frac{\theta}{n}
+\end{align}
+Note that,
+\begin{align}
+E\brak{\frac{T}{n^2}} &= E\brak{\frac{\sum_{i=1}^n X_i}{n^2}}\\
+&= \frac{E(\sum_{i=1}^n X_i)}{n^2}\\
+&= \sum_{i=1}^n \frac{E(X_i)}{n^2}\\
+&= \sum_{i=1}^n \frac{\theta}{n^2}\\
+&= \frac{\theta}{n}\\
+&= E(X_{(1)})
+\end{align}
+Therefore, by Lehmann–Scheffé theorem, with
+\begin{align}
+\theta &= X_{(1)},\\
+\tau(x) &= E(x),\\
+g(T) &= \frac{T}{n^2},
+\end{align}
+it follows that $\dfrac{T}{n^2}$ is UMVUE of $E(X_{(1)})$.\\
+
+Since there exists a unique UMVUE for $E(X_{(1)})$, it follows that 
+\begin{align}
+E(X_{(1)} | T) = \frac{T}{n^2}
+\end{align}
+Hence, option A is correct.
 \end{document}
