--- a/Assignment6/Assignment6.tex
+++ b/Assignment6/Assignment6.tex
@@ -214,4 +214,10 @@ Since there exists a unique UMVUE for $E(X_{(1)})$, it follows that
 E(X_{(1)} | T) = \frac{T}{n^2}
 \end{align}
 Hence, option A is correct.
+\begin{figure}[!hbt]
+    \centering
+	\includegraphics[width=\columnwidth]{./Figures/Figure_1.png}
+    \caption{Theory vs Simulated plot of $E(X_{(1)} |T)$}
+    \label{CDF_Y}
+\end{figure}
 \end{document}
