--- a/Assignment6/Assignment6.tex
+++ b/Assignment6/Assignment6.tex
@@ -28,6 +28,7 @@
 \usepackage[breaklinks=true]{hyperref}
 \usepackage{graphicx}
 \usepackage{tkz-euclide}
+\usepackage{textcomp}
 
 \usetikzlibrary{calc,math}
 \usepackage{listings}
@@ -155,20 +156,50 @@ where $\theta \in (0, \infty)$. Let $X_{(1)} = $ min $ \{ X_1, X_2, \ldots , X_n
 \end{enumerate}
 
 \section{Solution}
-\textbf{Lehmann–Scheffé theorem :}
-
+\begin{theorem}[Lehmann–Scheffé theorem]
 If $T$ is a complete sufficient statistic for $\theta$ and 
 \begin{align}
 \label{eqn 2.0.1}
 E(g(T)) = \tau(\theta)
 \end{align}
 then $g(T)$ is the uniformly minimum-variance unbiased estimator (UMVUE) of $\tau(\theta)$.\\
-
-We know that 
+\end{theorem}
+\begin{theorem}
 \begin{align}
 T = \sum_{i=1}^{n} X_i
 \end{align}
-is a complete and sufficient statistic. By the law of total expectation, 
+is a complete and sufficient statistic. 
+\end{theorem}
+\begin{proof}~\\
+\textit{(Sufficiency)}
+\begin{align}
+f_{X}(x_1, x_2, \ldots x_n) &= f_{X_1}(x_1)f_{X_2}(x_2) \ldots f_{X_n}(x_n)\\
+&= \dfrac{1}{\theta} \exp\brak{-\dfrac{x_1}{\theta}} \cdots \dfrac{1}{\theta} \exp\brak{-\dfrac{x_n}{\theta}}\\
+&= 1 \cdot \dfrac{1}{\theta^n} \exp\brak{-\dfrac{T}{\theta}}\\
+&= h(X) \cdot g(T, \theta) 
+\end{align}
+with 
+\begin{align}
+g(T, \theta) &= \dfrac{1}{\theta^n} \exp\brak{-\dfrac{T}{\theta}}\\
+h(X) &= 1
+\end{align}
+Therefore, $T$ is a sufficient statistic.\\
+\textit{(Completeness)}\\
+$X_i$ follow a gamma distribution, $X_i \sim \Gamma (1, \frac{1}{\theta})$. Hence, $T = \sum_{i=1}^n X_i $ follows a gamma distribution, $T \sim \Gamma (n, \frac{1}{\theta})$. Therefore, the expected value of a function $g$ is
+\begin{align}
+E(g(T)) &= 
+\int_0 ^{\infty} g(t) \dfrac{t^{n-1} e^{-\frac{t}{\theta}}}{\theta^n(n-1)!} dt\\ \label{eqn}
+&= \frac{1}{\theta^n (n-1)!} \int_0 ^{\infty} g(t) t^{n-1} e^{-\frac{t}{\theta}} dt\\ 
+&= \frac{1}{\theta^n (n-1)!} F \brak{\frac{1}{\theta}}\\
+&= 0 \text{ for all } \theta > 0.
+\end{align}
+The integral in \eqref{eqn} can be interpreted as the Laplace transform $F(s) = \int_0 ^{\infty} f(t)e^{-st} dt $ of the function $ f(t) = t^{n-1}g(t)$ evaluated at $\frac{1}{\theta}$. If this transform is $0$ for all $\theta$ in $(0, \infty)$, then $f(t)=0$ almost everywhere in $(0,\infty)$. Therefore, $g(t) = 0$ almost everywhere in $(0, \infty)$ and hence, 
+\begin{align}
+\pr{g(t)=0} = 1
+\end{align}
+Therefore, $T$ is a complete statistic.
+\end{proof}
+By the law of total expectation, 
 \begin{align}
 \label{eqn 2.0.3}
 E\brak{E(X_{(1)} | T )} = E(X_{(1)})
@@ -211,7 +242,7 @@ it follows that $\dfrac{T}{n^2}$ is UMVUE of $E(X_{(1)})$.\\
 
 Since there exists a unique UMVUE for $E(X_{(1)})$, it follows that 
 \begin{align}
-E(X_{(1)} | T) = \frac{T}{n^2}
+E(X_{(1)} | T) = \frac{T}{n^2} 
 \end{align}
 Hence, option A is correct.
 \begin{figure}[!hbt]
