--- a/Assignment6/Assignment6.tex
+++ b/Assignment6/Assignment6.tex
@@ -164,12 +164,12 @@ E(g(T)) = \tau(\theta)
 \end{align}
 then $g(T)$ is the uniformly minimum-variance unbiased estimator (UMVUE) of $\tau(\theta)$.\\
 \end{theorem}
-\begin{theorem}
+\begin{lemma}
 \begin{align}
 T = \sum_{i=1}^{n} X_i
 \end{align}
 is a complete and sufficient statistic. 
-\end{theorem}
+\end{lemma}
 \begin{proof}~\\
 \textit{(Sufficiency)}
 \begin{align}
