--- a/Assignment6/Assignment6.tex
+++ b/Assignment6/Assignment6.tex
@@ -156,6 +156,9 @@ where $\theta \in (0, \infty)$. Let $X_{(1)} = $ min $ \{ X_1, X_2, \ldots , X_n
 \end{enumerate}
 
 \section{Prerequisites}
+\begin{lemma}[Sum of Gamma random variables]
+Suppose that $X_1, X_2, X_3, \ldots X_n$ are $n$ gamma variables with parameters $k$ and $\theta$, $X_i \sim \Gamma(k, \theta)$. Then the sum $T = \sum_{i=1}^{n} X_i$ follows a gamma distribution with parameters $nk$ and $\theta$, $T \sim \Gamma(nk, \theta)$
+\end{lemma}
 \begin{definition}[Complete Statistic]
 The statistic $T$ is said to be complete for the distribution of $X$ if, for every measurable function $g$, if
 \begin{align}
